--- a/python決策與選擇結構.ipynb
+++ b/python決策與選擇結構.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python決策與選擇結構.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSJXag9uaw/okR7x6pLbY2",
+      "authorship_tag": "ABX9TyMY2W1lJayCXxddfMMIz+bP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,19 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Qiushengling/python2020/blob/main/python%E6%B1%BA%E7%AD%96%E8%88%87%E9%81%B8%E6%93%87%E7%B5%90%E6%A7%8B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "twIzTZP85fKS"
+      },
+      "source": [
+        "一天就會python\n",
+        "\n",
+        "\n",
+        "\n",
+        "2020.12.08"
       ]
     },
     {
@@ -73,6 +86,15 @@
       },
       "source": [
         "註解:已執行，不回顯示內容"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BHJQlWIc5dze"
+      },
+      "source": [
+        ""
       ]
     }
   ]
