--- a/python決策與選擇結構.ipynb
+++ b/python決策與選擇結構.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python決策與選擇結構.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMY2W1lJayCXxddfMMIz+bP",
+      "authorship_tag": "ABX9TyPBR3lE9bSqjkKFjWp2i3qh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +95,231 @@
       },
       "source": [
         ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AfVJ70D072Om",
+        "outputId": "7d033e04-4660-41a8-acab-942124c456ca"
+      },
+      "source": [
+        "a = 32\n",
+        "b = 33\n",
+        "\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b:\n",
+        "  print(\"a and b are equal\")\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b is greater than a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eVN7JKYH77_m",
+        "outputId": "d14d30e6-7182-4182-f541-c2d6509b5e2d"
+      },
+      "source": [
+        "a = 33\n",
+        "b = 33\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b:\n",
+        "  print(\"a and b are equal\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a and b are equal\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8_7sS0E87-Y9"
+      },
+      "source": [
+        "a = 35\n",
+        "b = 33\n",
+        "\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b:\n",
+        "  print(\"a and b are equal\")"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JFswGgTF8Cbt",
+        "outputId": "1085ffea-ae33-4aa7-8125-599d51d64c64"
+      },
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "else:\n",
+        "  print(\"b is not greater than a\")"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b is not greater than a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X4dhsDzb8HzW",
+        "outputId": "22cfdb35-489f-4314-e44d-711242ad7479"
+      },
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b:\n",
+        "  print(\"a and b are equal\")\n",
+        "else:\n",
+        "  print(\"a is greater than b\")"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a is greater than b\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9swAbwD58J6u",
+        "outputId": "ce5da030-d23b-48da-994d-3beee35d6ce6"
+      },
+      "source": [
+        "year= eval(input(\"請輸入年\"))\n",
+        "\n",
+        "if ((year%400==0) or (year%4==0 and year%100!=0)):\n",
+        "  print(\"{0} 是閏年\".format(year))\n",
+        "else:\n",
+        "  print(\"{0} 不是閏年\".format(year))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入年2020\n",
+            "2020 是閏年\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Su2Wl4MP8NA1",
+        "outputId": "45359c1c-adaf-470d-ff21-a26d9c06efb3"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "date = time.localtime()\t\n",
+        "print(date)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "time.struct_time(tm_year=2020, tm_mon=12, tm_mday=8, tm_hour=6, tm_min=1, tm_sec=49, tm_wday=1, tm_yday=343, tm_isdst=0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nMZLgmuS8n2l",
+        "outputId": "26854b93-f627-4aa5-e510-c251d847864e"
+      },
+      "source": [
+        "money = int(input(\"請輸入購物金額：\"))\n",
+        "\n",
+        "if(money >= 10000):\n",
+        "    if(money >= 100000):\n",
+        "        print(money * 0.8, end=\" 元\\n\")  #八折\n",
+        "    elif(money >= 50000):\n",
+        "        print(money * 0.85, end=\" 元\\n\")  #八五折\n",
+        "    elif(money >= 30000):\n",
+        "        print(money * 0.9, end=\" 元\\n\")  #九折\n",
+        "    else:\n",
+        "        print(money * 0.95, end=\" 元\\n\")  #九五折\n",
+        "else:\n",
+        "    print(money, end=\" 元\\n\")  #未打折"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入購物金額：300000\n",
+            "240000.0 元\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
