使用 Colaboratory 建立

--- a/python決策與選擇結構.ipynb
+++ b/python決策與選擇結構.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "python決策與選擇結構.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBR3lE9bSqjkKFjWp2i3qh",
+      "authorship_tag": "ABX9TyOv2dER0A601BBaRHl7kmmZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "id": "BHJQlWIc5dze"
       },
       "source": [
-        ""
+        "#**if ...elsif**\n"
       ]
     },
     {
@@ -172,6 +172,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l9A53PzM9WNm"
+      },
+      "source": [
+        "# **雙向判斷式（if⋯else）: 二選一｜一定要選的**\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -198,6 +207,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2PsXa9tK9coe"
+      },
+      "source": [
+        "# **if ...elsif ...else 多選一｜一定要選的**"
       ]
     },
     {
@@ -229,6 +247,19 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DcJSSQrx9jh3"
+      },
+      "source": [
+        "# **各種判斷條件 AND OR**\n",
+        "\n",
+        "\n",
+        "\n",
+        "判斷是否為閏年"
       ]
     },
     {
@@ -284,6 +315,30 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pi9g-Ddp9rKF"
+      },
+      "source": [
+        "# **多向判斷式（if⋯elif⋯else）:收銀台程式開發**\n",
+        "\n",
+        "\n",
+        "百貨公司週年慶活動血拼大打折，\n",
+        "吸引很多顧客上門，\n",
+        "公司決定再加碼回饋客戶，\n",
+        "\n",
+        "只要客戶消費\n",
+        "金額在 100000 元以上就打八折，\n",
+        "金額在 50000 元以上就打八五折，\n",
+        "金額在 30000 元以上就打九折，\n",
+        "金額在 10000 元以上就打九五折，\n",
+        "金額在 10000 元以下就不打折\n",
+        "\n",
+        "請幫該公司設計這個收銀台的程式，\n",
+        "輸入顧客購買金額後，計算顧客應付的金錢。"
       ]
     },
     {
